# drf-template

./: .env-local  .gitignore  Dockerfile  README.md  docker-compose-local.yml
poetry/: pyproject.toml
src/: manage.py
src/config/: base.py  local.py  stand.py
src/core/: asgi.py  settings.py  uwsgi.ini  wsgi.py
src/someapp/: admin.py  models.py
src/someapp/migrations/: 0001_initial.py  0002_rename_album_name_album_name.py
