[tool.poetry]
name = "drf-template"
version = "0.1.0"
description = "django rest framework template"
authors = ["Valiev T.M. <cptchunk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
